# python-template

./: Makefile  README.md  dev-requirements.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yaml  python-ci.yaml  test-ci.yaml  test.yaml
src/: main.py
src/project_name/: main_test.py
