[project]
name = "python-template"
description = "uv package for easy Python repo creation"
keywords = []
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = ["loguru"]
dynamic = ["version"]

[tool.uv]
dev-dependencies = [
  "pyink",
  "isort[colors]",
  "black",
  "ruff",
  "pre-commit",
  "coverage",
  "coverage-badge",
  "ruff",
  "pytype",
  "blocklint",
  "tqdm",
  "ipykernel",
  "absl-py",
  "pytest-cov",
  "pytest-xdist",
  "pytest-html",
  "pytest-mock",
  "mkdocs-material",
  "mkdocs-gen-files",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
  "E",     # pycodestyle
  "F",     # flake8
  "UP",    # pyupgrade
  "S",     # bandit
  "D",     # pydocstyle
  "W",     # Warning
  "B",     # Bugbear
  "INP",   # __init__.py
  "COM",   # Commas
  "SLF",   # private access
  "TID",   # tidy imports
  "TD",    # todos
  "PD",    # pandas
  "PL",    #pylint
  "NPY",   # numpy
  "RUF",   # ruff
  "ASYNC", # async
]

ignore = [
  "E501",    # Never enforce `E501` (line length)
  "COM812",  # Allow missing trailing commas
  "PLR0913", # Allow many arguments in functions
  "TD003",   # Allow TODOs without issue link
  "S101",    # Allow use of asserts when they make more sense than raising errors
]

unfixable = ["B"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"*_test.py" = ["S101"]

[tool.pyink]
pyink-indentation = 2
pyink-use-majority-quotes = true
target-version = ["py311"]
line-length = 80
color = true
exclude = '''
/(
  \.git
  | \.hg
  | \.tox
  | \.venv
  | \.pytype
  | _build
  | buck-out
  | build
  | dist
  | env
  | venv
)/
'''


[tool.isort]
py_version = "311"
line_length = 1_000
lines_after_imports = 2
single_line_exclusions = ["collections.abc", "typing", "typing_extensions"]
known_typing = ["typing", "typing_extensions", "types"]
sections = [
  "FUTURE",
  "STDLIB",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER",
  "TYPING",
]
include_trailing_comma = true
profile = "google"
multi_line_output = 3
indent = 4
color_output = true

[tool.coverage.run]
source = ["src/project_name"] # Add source folder to coverage
branch = true
omit = ["*test.py"]

[coverage.paths]
source = "src/project_name"

[coverage.run]
branch = true

[coverage.report]
fail_under = "90"
show_missing = true
